--- a/fakemarket/src/App.css
+++ b/fakemarket/src/App.css
@@ -6,7 +6,15 @@
 
 #root {
   font-family: "Font", sans-serif;
-  background-color: #dafffb;
+  background-color: #bdcdd6;
   width: 100%;
   height: 100vh;
+}
+
+body {
+  background-color: #bdcdd6;
+}
+
+.main {
+  background-color: black;
 }
