--- a/fakemarket/src/components/Header.css
+++ b/fakemarket/src/components/Header.css
@@ -2,15 +2,14 @@
   display: flex;
   align-items: center;
   width: auto;
-  background-color: #64ccc5;
+  background-color: #176b87;
   color: white;
-  margin-bottom: 100vh;
   height: 8vh;
   padding: 8px;
 }
 
 .title {
-  margin-left: 40%;
+  margin-left: 43vw;
 }
 
 .menu:hover {
