--- a/fakemarket/src/components/StockDisplay.css
+++ b/fakemarket/src/components/StockDisplay.css
@@ -1,6 +1,40 @@
 .stock-holder {
   display: flex;
   flex-direction: column;
-
   align-items: center;
+}
+.stock-title {
+  width: auto;
+  margin-top: 5%;
+}
+.graph {
+  width: 40vw;
+  height: 30vh;
+  border: 2px solid black;
+}
+
+.details {
+  display: grid;
+  align-items: center;
+  text-align: center;
+  margin: 0;
+  padding: 0% 5%;
+  width: 50%;
+  font-size: 24px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.buy-button {
+  width: 50%;
+  margin-left: 25%;
+  background-color: green;
+  border: 2px solid black;
+}
+
+.sell-button {
+  width: 50%;
+  margin-left: 25%;
+  background-color: red;
+  border: 2px solid black;
 }
